--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <body>
     <div class="video-container">
         <video autoplay loop muted>
-            <source src="https://raw.githubusercontent.com/deadforlov/SamSlayre/refs/heads/main/0314(2).mp4" type="video/mp4">
+            <source src="https://raw.githubusercontent.com/deadforlov/AliceCruz/refs/heads/main/0319.mp4" type="video/mp4">
             Ваш браузер не поддерживает тег video.
         </video>
     </div>
