--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     <div class="container">
         <div class="neon-text">Alice Cruz</div>
         <!-- Используем яркую иконку "сердце" для кнопки OnlyFans -->
-        <a href="https://onlyfans.com/samlypuff/c232" class="btn onlyfans">
+        <a href="https://onlyfans.com/alicruzxxx/c93" class="btn onlyfans">
             <i class="fa-solid fa-heart" style="font-size: 30px; margin-right: 10px;"></i> <!-- Иконка для OnlyFans -->
-            OnlyFans (Free)
+            OnlyFans
         </a>
         <a href="https://t.me/Samm_slayre" class="btn telegram"><i class="fa-brands fa-telegram"></i> Telegram</a>
         <a href="https://www.instagram.com/samm_slayre/" class="btn instagram"><i class="fa-brands fa-instagram"></i> Instagram</a>
