--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             <i class="fa-solid fa-heart" style="font-size: 30px; margin-right: 10px;"></i> <!-- Иконка для OnlyFans -->
             OnlyFans
         </a>
-        <a href="https://t.me/Samm_slayre" class="btn telegram"><i class="fa-brands fa-telegram"></i> Telegram</a>
-        <a href="https://www.instagram.com/samm_slayre/" class="btn instagram"><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a href="https://t.me/alice_cruzx" class="btn telegram"><i class="fa-brands fa-telegram"></i> Telegram</a>
+        <a href="https://instagram.com/alice_crazyyx/" class="btn instagram"><i class="fa-brands fa-instagram"></i> Instagram</a>
     </div>
 </body>
 </html>
